# react-native-embind

react-native-cppjs/: package.json
react-native-cppjs/android/: build.gradle
react-native-cppjs/android/src/main/java/com/jsi/lib/: RNJsiLibModule.java
react-native-cppjs/cpp/: CMakeLists.txt
react-native-cppjs/cpp/src/: JSI_module.cpp
react-native-cppjs/js/: index.js
react-native-cppjs/script/: build_android.js  getCliPath.js
react-native-embind/: package.json
react-native-embind/cpp/src/: bind.cpp  bind.h  val.h  wire.h
react-native-embind/cpp/src/emscripten/: bind.cpp  bind.h  val.h
react-native-embind/js/: embind.js
sample/: .gitignore  App.tsx  metro.config.js  package.json
sample/native/: example.cpp  example.h
sample/src/: embind_test.js
sample/src/native/: embind_test.cpp  example.cpp
